--- a/app/editor/style.scss
+++ b/app/editor/style.scss
@@ -2,7 +2,7 @@
   margin-top: 30px;
   margin-bottom: 10px;
   margin-right: 10px;
-  flex: 1;
+  width: 50%;
   display: flex;
   flex-direction: column;
   min-width: 100px;
