--- a/app/viewer/style.scss
+++ b/app/viewer/style.scss
@@ -1,6 +1,7 @@
 #viewer {
   margin-top: 60px;
   margin-bottom: 10px;
+  margin-right: 10px;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -13,9 +14,32 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  resize: both;
+}
 
-  #viewer-iframe {
-    border: 0 solid transparent !important;
-    width: 100%;
-  }
+#viewer-drag {
+  position: absolute;
+  background-color: rgba(153, 153, 153, 0.4);
+  width: 12px;
+  height: 100%;
+  cursor: ew-resize;
+  left: -12px;
+}
+
+#frame-blocker {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: none;
+}
+
+#viewer-iframe {
+  position: absolute;
+  border: 0px solid transparent !important;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
 }
