--- a/app/debug/style.scss
+++ b/app/debug/style.scss
@@ -35,7 +35,6 @@
   height: 18px !important;
   cursor: col-resize;
   color: #b1b1b1;
-  font-size: 12px;
 }
 
 .prompt-label {
@@ -60,4 +59,12 @@ body {
     width: auto;
     cursor: row-resize;
   }
+}
+
+#debug {
+  font-face: monaco, Consolas, "Lucida Console", monospace;
+  -webkit-font-smoothing: none;
+  padding-left: 5px;
+  padding-top: 5px;
+  font-size: 10px;
 }
