Shows the URL for external browser use and kills the server when pressing the stop button

--- a/app/window/window.scss
+++ b/app/window/window.scss
@@ -99,7 +99,7 @@ body {
   height: 44px;
 }
 
-#project-name {
+#project-name, #project-url {
   font-size: 12px;
   padding-left: 15px;
   color: #b5b5b5;
